--- a/app.css
+++ b/app.css
@@ -1,10 +1,28 @@
 .content h2 {
 	margin-left: -16px;
 }
+#scroller{
+    max-height: 450px;
+    overflow-y:scroll; 
+}
 .callout {
-	padding: 20px;
+	padding: 15px;
 	border: 1px solid #eee;
 	border-left-width: 5px;
 	border-radius: 3px;
 	cursor: pointer;
 }
+.desno {
+    padding: 20px;
+}
+
+  .full button span {
+    background-color: limegreen;
+    border-radius: 32px;
+    color: black;
+  }
+  .partially button span {
+    background-color: orange;
+    border-radius: 32px;
+    color: black;
+  }
