--- a/app.css
+++ b/app.css
@@ -1,15 +1,18 @@
 .content h2 {
 	margin-left: -16px;
 }
+
+
 #scroller{
-    max-height: 450px;
+    max-height: 500px;
     overflow-y:scroll; 
 }
+
 .callout {
 	padding: 15px;
 	border: 1px solid #eee;
 	border-left-width: 5px;
-	border-radius: 3px;
+	border-radius: 5px;
 	cursor: pointer;
 }
 .desno {
@@ -22,17 +25,24 @@ pre{
     max-width: 500px;
 }
 
-  .full button span {
-    background-color: lime-green;
-    border-radius: 32px;
-    color: black;
-  }
-  .partially button span {
-    background-color: orange;
-    border-radius: 32px;
-    color: black;
-  }
-
 .picker-label{
   text-align: right;
+}
+
+.error{
+  color: red;
+}
+
+table {
+  font-size: medium;
+}
+
+table td:nth-child(1)
+{
+  text-align: right;
+}
+td {
+   padding-top: 15px;
+   padding-right: 20px;
+   white-space: pre;
 }
