fix two ugly bugs

--- a/app.css
+++ b/app.css
@@ -46,7 +46,9 @@ td {
    padding-right: 20px;
    white-space: pre;
 }
-
+.address {
+  height: 80px;
+}
 .selected{
   background-color: lightblue;
 }
